--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>БРИДЖ</title>
-  <link rel="stylesheet" href="https://unpkg.com/nouislider@14.6.3/distribute/nouislider.min.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicon/favicon-180.png">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="preload" href="fonts/GothamPro.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/Inter-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/SFUIDisplay-Black.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/SFUIDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/SFUIDisplay-Light.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/SFUIDisplay-Medium.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/SFUIDisplay-Regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/SFUIDisplay-Semibold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet" href="nouislider\dist\nouislider.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -615,11 +627,13 @@
     <form class="footer__form" action="https://echo.htmlacademy.ru/" method="post">
       <div class="footer__form-wrapper-input">
         <label for="name"></label>
-        <input class="footer__form-input footer__form-input--name" type="text" name="name" id="name" placeholder="Ваше имя" required>
+        <input class="footer__form-input footer__form-input--name" type="text" name="name" id="name"
+          placeholder="Ваше имя" required>
       </div>
       <div class="footer__form-wrapper-input">
         <label for="phone"></label>
-        <input class="footer__form-input footer__form-input--tel" type="tel" name="phone" id="phone" placeholder="Ваш номер телефона" required>
+        <input class="footer__form-input footer__form-input--tel" type="tel" name="phone" id="phone"
+          placeholder="Ваш номер телефона" required>
       </div>
       <button class="footer__form-button" type="submit">оставить заявку</button>
     </form>
@@ -640,7 +654,7 @@
     </div>
   </template>
 
-  <script src="https://unpkg.com/nouislider@14.6.3/distribute/nouislider.min.js"></script>
+  <script src="nouislider\dist\nouislider.min.js"></script>
   <script src="swiper/swiper-bundle.min.js"></script>
   <script src="js/script.min.js"></script>
 </body>
