Изменил размер шрифта

--- a/source/index.html
+++ b/source/index.html
@@ -419,7 +419,7 @@
                   начисление</label>
                 <div class="calculator__input-wrapper calculator__input-wrapper--pay-top">
                   <input class="calculator__input calculator__input--pay-top" type="text" name="monty"
-                    id="monthlyСharge" value="22 208 ₽">
+                    id="monthlyСharge" value="22 208 ₽" disabled>
                 </div>
               </li>
               <li class="calculator__item-reckoning calculator__item-reckoning--bottom">
@@ -427,7 +427,7 @@
                   <label class="calculator__label calculator__label--pay" for="income">Доход</label>
                   <div class="calculator__input-wrapper calculator__input-wrapper--pay">
                     <input class="calculator__input calculator__input--pay" type="text" id="income" name="income"
-                      value="13%">
+                      value="13%" disabled>
                   </div>
                 </div>
                 <div class="calculator__wrapper-pay">
@@ -435,7 +435,7 @@
                     начисление</label>
                   <div class="calculator__input-wrapper calculator__input-wrapper--pay-right">
                     <input class="calculator__input calculator__input--pay-right" type="text" id="annualCharge"
-                      name="annual" value="316 500 ₽">
+                      name="annual" value="316 500 ₽" disabled>
                   </div>
                 </div>
               </li>
